cmake_minimum_required(VERSION 3.6)
project(BonsaiTest)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES main.cpp)
add_executable(BonsaiTest ${SOURCE_FILES})
include_directories(/Disk/ds-sopa-group/PPE/software/HyperK/build/Bonsai/bonsai)
include_directories(/Disk/ds-sopa-group/PPE/software/root/6.08/build/include)
include_directories(/Disk/ds-sopa-group/PPE/software/HyperK/src/WCSim/include)
#link_directories(/Disk/ds-sopa-group/PPE/software/HyperK/build/Bonsai)
#link_directories(/Disk/ds-sopa-group/PPE/software/HyperK/build/WCSim)
#link_directories(/Disk/ds-sopa-group/PPE/software/root/6.08/build/lib)
set(ROOTLIB /Disk/ds-sopa-group/PPE/software/root/6.08/build/lib)
find_library(LIB_CORE Core PATH ${ROOTLIB})
find_library(LIB_RIO RIO PATH ${ROOTLIB})
find_library(LIB_NET Net PATH ${ROOTLIB})
find_library(LIB_HIST Hist PATH ${ROOTLIB})
find_library(LIB_GRAF Graf PATH ${ROOTLIB})
find_library(LIB_GRAF3D Graf3d PATH ${ROOTLIB})
find_library(LIB_GPAD Gpad PATH ${ROOTLIB})
find_library(LIB_TREE Tree PATH ${ROOTLIB})
find_library(LIB_RINT Rint PATH ${ROOTLIB})
find_library(LIB_POSTSCRIPT Postscript PATH ${ROOTLIB})
find_library(LIB_MATRIX Matrix PATH ${ROOTLIB})
find_library(LIB_PHYSICS Physics PATH ${ROOTLIB})
find_library(LIB_MATHCORE MathCore PATH ${ROOTLIB})
find_library(LIB_THREAD Thread PATH ${ROOTLIB})
find_library(LIB_MULTIPROC MultiProc PATH ${ROOTLIB})
find_library(LIB_M m PATH ${ROOTLIB})
find_library(LIB_DL dl PATH ${ROOTLIB})
find_library(LIB_WCSIMBONSAI WCSimBonsai PATH /Disk/ds-sopa-group/PPE/software/HyperK/build/Bonsai )
find_library(LIB_WCSIMROOT WCSimRoot PATH /Disk/ds-sopa-group/PPE/software/HyperK/build/WCSim )
target_link_libraries(BonsaiTest ${LIB_WCSIMBONSAI} ${LIB_WCSIMROOT} ${LIB_CORE} ${LIB_RIO} ${LIB_NET} ${LIB_HIST} ${LIB_GRAF} ${LIB_GRAF3D} ${LIB_GPAD} ${LIB_TREE} ${LIB_RINT} ${LIB_POSTSCRIPT} ${LIB_MATRIX} ${LIB_PHYSICS} ${LIB_MATHCORE} ${LIB_THREAD} ${LIB_MULTIPROC} ${LIB_M} ${LIB_DL})